--- a/app/api/src/main/resources/templates/layout.html
+++ b/app/api/src/main/resources/templates/layout.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width" />
   <meta name="description" content="Resume viewer and editor web application">
   <title>Resume Editor</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link th:href="@{/js/index.css}" rel="stylesheet" media="screen" />
   <script th:if="${@environment.getProperty('spring.devtools.livereload.enabled')}"
     src="http://localhost:35729/livereload.js"></script>
 </head>
@@ -16,4 +18,4 @@
   </section>
 </body>
 
-</html>              
+</html>
